--- a/app/src/main/res/drawable/style_for_title_main_menu.xml
+++ b/app/src/main/res/drawable/style_for_title_main_menu.xml
@@ -6,7 +6,7 @@
         android:centerColor="@color/forestGreen"
         android:endColor="@color/darkGreen"
         android:startColor="@color/limeGreen"/>-->
-    <solid android:color="@color/teal_700"/>
+    <solid android:color="@color/purple_500"/>
     <padding
         android:top="5dp"
         android:right="5dp"
